test/functional/failtests/lambdas/lambda.mismatchedInferredBase.txt
TypeError: Could not use lambda func where function is not expcted
3 | func main() {
4 |     func<int>:x = (): (): 123;
  |                       ^ (4:23)
5 | }

